@@ -13,9 +13,9 @@ import com.github.salilvnair.convengine.engine.dialogue.InteractionPolicyDecisio
 import com.github.salilvnair.convengine.engine.helper.SessionContextHelper;
 import com.github.salilvnair.convengine.engine.pipeline.EngineStep;
 import com.github.salilvnair.convengine.engine.pipeline.StepResult;
-import com.github.salilvnair.convengine.engine.pipeline.annotation.MustRunAfter;
-import com.github.salilvnair.convengine.engine.pipeline.annotation.MustRunBefore;
-import com.github.salilvnair.convengine.engine.pipeline.annotation.RequiresConversationPersisted;
+import com.github.salilvnair.convengine.engine.core.step.annotation.MustRunAfter;
+import com.github.salilvnair.convengine.engine.core.step.annotation.MustRunBefore;
+import com.github.salilvnair.convengine.engine.core.step.annotation.RequiresConversationPersisted;
 import com.github.salilvnair.convengine.engine.session.EngineSession;
 import com.github.salilvnair.convengine.entity.CePendingAction;
 import com.github.salilvnair.convengine.cache.StaticConfigurationCacheService;
@@ -190,8 +190,8 @@ public class ActionLifecycleStep implements EngineStep {
         }
         if (actionKey == null || actionKey.isBlank()) {
             if (candidates.size() > 1) {
-                Integer p1 = candidates.getFirst().getPriority() == null ? Integer.MAX_VALUE
-                        : candidates.getFirst().getPriority();
+                Integer p1 = candidates.get(0).getPriority() == null ? Integer.MAX_VALUE
+                        : candidates.get(0).getPriority();
                 Integer p2 = candidates.get(1).getPriority() == null ? Integer.MAX_VALUE
                         : candidates.get(1).getPriority();
                 if (p1.equals(p2)) {
@@ -199,7 +199,7 @@ public class ActionLifecycleStep implements EngineStep {
                 }
             }
         }
-        CePendingAction best = candidates.getFirst();
+        CePendingAction best = candidates.get(0);
         if (best.getBeanName() == null || best.getBeanName().isBlank()
                 || best.getMethodNames() == null || best.getMethodNames().isBlank()) {
             return null;
